--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             </div>
             <hr/>
             <div class="container">
-                <div class="row" id="contenedorProductos"></div>
+                <div class="row" id="contenedorProductos">
+                </div>
             </div>
         </div>
     </section>
