added local storage functionality and translated code and html to english

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                            <span id = "cartTotal" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            <span id="cartTotal" class="badge bg-dark text-white ms-1 rounded-pill">empty</span>
+                        </button>
+                    </form>
+                    <form class="d-flex">
+                        <button id="emptyCart" class="btn btn-outline-dark" type="submit">
+                            <span class="text-white rounded-pill">🗑️</span>
                         </button>
                     </form>
                 </div>
@@ -82,7 +87,6 @@
         </header>
         <!-- Section-->
         <section class="py-5">
-
             <div class="container text-center">
                 <h1>Productos destacados</h1>
             </div>
