--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             rel="stylesheet"/>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet"/>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+        <link href="css/ownStyles.css" rel="stylesheet"/>
+        <script src="js/scripts.js" defer></script>
     </head>
 
     <body>
@@ -82,16 +85,30 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Carrito de compras</h5>
                                         <button
                                             type="button"
                                             class="btn-close"
                                             data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body" id="cardsModal"></div>
+                                    <div class="modal-body">
+                                        <table class="table-borderless">
+                                            <thead>
+                                                <tr>
+                                                <th scope="col">Product name</th>
+                                                <th scope="col">Quantity</th>
+                                                <th scope="col">Price</th>
+                                                <th scope="col">Total</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="cardsModal">
+                                            </tbody>
+                                            </table>
+                                    </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="payButton">Pagar</button>
                                     </div>
                                 </div>
                             </div>
@@ -134,6 +151,6 @@
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+
 </body>
 </html>
