--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>Rafa's hardware store</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
         <!-- Bootstrap icons-->
@@ -25,7 +25,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">Home</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -38,9 +38,6 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#!">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#!">About</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -50,7 +47,7 @@
                                 href="#"
                                 role="button"
                                 data-bs-toggle="dropdown"
-                                aria-expanded="false">Shop</a>
+                                aria-expanded="false">Catalog</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li>
                                     <a class="dropdown-item" href="#!">All Products</a>
@@ -96,10 +93,10 @@
                                         <table class="table-borderless">
                                             <thead>
                                                 <tr>
-                                                <th scope="col">Product name</th>
-                                                <th scope="col">Quantity</th>
-                                                <th scope="col">Price</th>
-                                                <th scope="col">Total</th>
+                                                    <th class = "product-table">Product name</th>
+                                                    <th class = "product-table">Price</th>
+                                                    <th class = "product-table">Quantity</th>
+                                                    <th class = "product-table">Total</th>
                                                 </tr>
                                             </thead>
                                             <tbody id="cardsModal">
