--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="payButton">Pagar</button>
+                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="payButton">Place order</button>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container text-center">
-                <h1>Productos destacados</h1>
+                <h1>Latests products</h1>
             </div>
             <hr/>
             <div class="container">
@@ -141,7 +141,7 @@
     <!-- Footer-->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
+            <p class="m-0 text-center text-white">Santiago Pena &copy; 2022</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
